--- a/internet/cardapio/pom.xml
+++ b/internet/cardapio/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.3.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>rb</groupId>
-	<artifactId>fullstack-cardapio</artifactId>
+	<groupId>com.example</groupId>
+	<artifactId>cardapio</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>fullstack-cardapio</name>
-	<description>Projeto de um cardapio FullStack desenvolvido pelo o canal Kipper Dev</description>
+	<name>cardapio</name>
+	<description>Projeto FullStack de cardápio </description>
 	<url/>
 	<licenses>
 		<license/>
@@ -32,19 +32,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-database-postgresql</artifactId>
 		</dependency>
 
 		<dependency>
@@ -52,11 +40,6 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
