--- a/internet/cardapio/src/main/resources/application.properties
+++ b/internet/cardapio/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=cardapio
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/food
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
